force-app/main/default/objects/Customer_New__c/Customer_New__c.object-meta.xml
<CustomObject>
    <label>Customer New</label>
    <nameField>
        <label>Customer New Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers New</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>