force-app/main/default/objects/Customer_New__c/fields/Customer_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Description__c</fullName>
    <label>Customer Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>