force-app/main/default/objects/Customer_New__c/fields/Customer_New_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_New_Type__c</fullName>
    <label>Customer New Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
                <default>true</default>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>