force-app/main/default/objects/Customer_New__c/fields/enter_email__c.field-meta.xml
<CustomField>
    <fullName>enter_email__c</fullName>
    <label>enter email</label>
    <type>Email</type>
</CustomField>